# sprincle

./: .gcc-flags.json  .gitignore  .travis.yml  CMakeLists.txt  README.md  biicode.conf  main.cpp
cmake/: FindCAF.cmake  FindLibraryWithDebug.cmake  get_compiler_version.cpp
examples/: CMakeLists.txt  node_examples.cpp
include/sprincle/: all.hpp  antijoin_node.hpp  delta.hpp  detail.hpp  filter_node.hpp  input_node.hpp  join_node.hpp  load_model.h  map_node.hpp  match_pair.hpp  message_atoms.hpp  rete.hpp
include/sprincle/details/: compare_tuples.hpp  equals.hpp  exactly.hpp  memory.hpp  not_in_sequence.hpp  project.hpp  rete_actor.hpp
share/sprincle/: FindSprincle.cmake
src/: CMakeLists.txt  load_model.cpp  rete.cpp
test/: CMakeLists.txt  pretty_tuple.h  test_config.h.in  test_detail.cpp  test_load_model.cpp  test_rete.cpp
test/resources/: railway-metamodel.ttl  railway_minimal_routesensor_metamodel.ttl
trainbenchmark/: CMakeLists.txt  config.h.in  load_model.cpp  load_model.h  load_model.hpp  measure.hpp  measure_queries.py  pretty_tuple.hpp  queries.hpp  route_sensor_query.hpp  route_sensor_query_cli.cpp  route_sensor_query_new.hpp  switch_sensor_query.hpp  switch_sensor_query_cli.cpp  test_load_model.cpp  test_queries.cpp  test_route_sensor_query.cpp
